# gifcurry

./: CHANGELOG.md  Gifcurry.cabal  stack.yaml
src/gui/: GuiRecords.hs  GuiTextOverlays.hs
