name:                 Gifcurry
version:              6.0.1.0
synopsis:             GIF creation utility.
description:          The open-source, Haskell-built video editor for GIF makers.
homepage:             https://github.com/lettier/gifcurry
license:              BSD3
license-file:         LICENSE
author:               Lettier
maintainer:           Lettier
copyright:            (C) 2016 David Lettier
category:               Application
                      , Library
                      , Graphics
build-type:           Simple
extra-source-files:     ./LICENSE
                      , ./CHANGELOG.md
                      , ./makefile
                      , ./lib/GtkMainSyncAsync.hs
                      , ./lib/GiCairoCairoBridge.hs
                      , ./lib/LICENSE
                      , ./src/dev/Paths_Gifcurry.hs
                      , ./src/data/style.css
                      , ./src/data/style-3-18.css
                      , ./src/data/style-3-20.css
                      , ./src/data/about-dialog-button-image.svg
                      , ./src/data/clone-icon.svg
                      , ./src/data/check-icon.svg
                      , ./src/data/color-count-icon.svg
                      , ./src/data/crop-icon.svg
                      , ./src/data/crop-left-icon.svg
                      , ./src/data/crop-right-icon.svg
                      , ./src/data/crop-top-icon.svg
                      , ./src/data/crop-bottom-icon.svg
                      , ./src/data/dither-icon.svg
                      , ./src/data/down-icon.svg
                      , ./src/data/end-icon.svg
                      , ./src/data/error-icon.svg
                      , ./src/data/file-icon.svg
                      , ./src/data/file-size.svg
                      , ./src/data/fps-icon.svg
                      , ./src/data/gifcurry-logo.svg
                      , ./src/data/gifcurry-icon.svg
                      , ./src/data/info-icon.svg
                      , ./src/data/left-icon.svg
                      , ./src/data/left-right-icon.svg
                      , ./src/data/minus-icon.svg
                      , ./src/data/open-icon.svg
                      , ./src/data/plus-icon.svg
                      , ./src/data/pause-icon.svg
                      , ./src/data/pen-icon.svg
                      , ./src/data/right-icon.svg
                      , ./src/data/save-as-gif-icon.svg
                      , ./src/data/save-as-video-icon.svg
                      , ./src/data/save-icon.svg
                      , ./src/data/spiral-icon.svg
                      , ./src/data/start-icon.svg
                      , ./src/data/t-icon.svg
                      , ./src/data/text-icon.svg
                      , ./src/data/up-icon.svg
                      , ./src/data/up-down-icon.svg
                      , ./src/data/upload-icon.svg
                      , ./src/data/view-icon.svg
                      , ./src/data/warning-icon.svg
                      , ./src/data/width-icon.svg
                      , ./src/data/x-icon.svg
                      , ./src/data/pattern.svg
                      , ./src/data/gray-pattern.png
                      , ./src/data/purple-pattern.png
                      , ./src/data/green-pattern.png
                      , ./src/data/orange-pattern.png
data-files:             data/gui.glade
                      , data/style.css
                      , data/style-3-18.css
                      , data/style-3-20.css
                      , data/about-dialog-button-image.svg
                      , data/clone-icon.svg
                      , data/check-icon.svg
                      , data/color-count-icon.svg
                      , data/crop-icon.svg
                      , data/crop-left-icon.svg
                      , data/crop-right-icon.svg
                      , data/crop-top-icon.svg
                      , data/crop-bottom-icon.svg
                      , data/dither-icon.svg
                      , data/down-icon.svg
                      , data/end-icon.svg
                      , data/error-icon.svg
                      , data/file-icon.svg
                      , data/file-size.svg
                      , data/fps-icon.svg
                      , data/gifcurry-logo.svg
                      , data/gifcurry-icon.svg
                      , data/info-icon.svg
                      , data/left-icon.svg
                      , data/left-right-icon.svg
                      , data/minus-icon.svg
                      , data/open-icon.svg
                      , data/plus-icon.svg
                      , data/pause-icon.svg
                      , data/pen-icon.svg
                      , data/right-icon.svg
                      , data/save-as-gif-icon.svg
                      , data/save-as-video-icon.svg
                      , data/save-icon.svg
                      , data/spiral-icon.svg
                      , data/start-icon.svg
                      , data/t-icon.svg
                      , data/text-icon.svg
                      , data/up-icon.svg
                      , data/up-down-icon.svg
                      , data/upload-icon.svg
                      , data/view-icon.svg
                      , data/warning-icon.svg
                      , data/width-icon.svg
                      , data/x-icon.svg
                      , data/gray-pattern.png
                      , data/purple-pattern.png
                      , data/green-pattern.png
                      , data/orange-pattern.png
data-dir:             ./src/
cabal-version:        >= 1.10

source-repository head
  type:     git
  location: https://github.com/lettier/gifcurry

library
  exposed-modules:      Gifcurry
  build-depends:        base >= 4.11 && < 5
                      , process >= 1.6.2.0
                      , temporary >= 1.2 && < 1.4
                      , directory >= 1.3 && < 1.4
                      , text >= 1.2 && < 3.0
                      , filepath >= 1.4 && < 1.5
                      , filemanip >= 0.3.6 && < 0.4
                      , bytestring >= 0.10 && < 0.13
                      , yaml >= 0.8 && < 0.13
  hs-source-dirs:       ./src
                      , ./src/lib/
  ghc-options:        -Wall -freverse-errors
  default-language:   Haskell2010

executable            gifcurry_gui
  main-is:            Main.hs
  build-depends:        base >= 4.11 && < 5
                      , haskell-gi >= 0.26 && < 1.0
                      , haskell-gi-base >= 0.26 && < 1.0
                      , gi-gobject >= 2.0 && < 3.0
                      , gi-gio >= 2.0 && < 3.0
                      , gi-glib >= 2.0 && < 3.0
                      , gi-pango >= 1.0 && < 2.0
                      , gi-gdk >= 3.0 && < 4.0
                      , gi-gdkpixbuf >= 2.0 && < 3.0
                      , gi-gtk >= 3.0 && < 4.0
                      , gi-cairo >= 1.0 && < 2.0
                      , gi-gstbase >= 1.0 && < 2.0
                      , gi-gst >= 1.0 && < 2.0
                      , gi-gstvideo >= 1.0 && < 2.0
                      , cairo >= 0.13 && < 0.14
                      , pango >= 0.13 && < 0.14
                      , process >= 1.6.2.0
                      , temporary >= 1.2 && < 1.4
                      , directory >= 1.3 && < 1.4
                      , text >= 1.2 && < 3.0
                      , time >= 1.8 && < 1.15
                      , filepath >= 1.4 && < 1.5
                      , filemanip >= 0.3.6 && < 0.4
                      , transformers >= 0.5 && < 0.7
                      , pureMD5 >= 2.1 && < 2.2
                      , bytestring >= 0.10 && < 0.13
                      , yaml >= 0.8 && < 0.13
                      , system-filepath == 0.4.14
                      , system-fileio == 0.3.16.4
  other-modules:        Paths_Gifcurry
                      , GuiRecords
                      , GuiCapabilities
                      , Gifcurry
                      , GuiStyle
                      , GuiTextOverlays
                      , GuiPreview
                      , GuiKeyboard
                      , GuiMisc

                      , GtkMainSyncAsync
                      , GiCairoCairoBridge
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -freverse-errors
  hs-source-dirs:       ./lib/
                      , ./src/
                      , ./src/gui/
                      , ./src/lib/
  default-language:   Haskell2010

executable            gifcurry_cli
  main-is:            Main.hs
  build-depends:        base >= 4.11 && < 5
                      , process >= 1.6.2.0
                      , temporary >= 1.2 && < 1.4
                      , directory >= 1.3 && < 1.4
                      , cmdargs == 0.10.*
                      , text >= 1.2 && < 3.0
                      , filepath >= 1.4 && < 1.5
                      , filemanip >= 0.3.6 && < 0.4
                      , aeson >= 1.4 && < 3.0
                      , bytestring >= 0.10 && < 0.13
                      , yaml >= 0.8 && < 0.13
  other-modules:      Gifcurry
  ghc-options:        -Wall -freverse-errors
  hs-source-dirs:       ./src/
                      , ./src/cli/
                      , ./src/lib/
  default-language:   Haskell2010
